outputs/csi300-test/2025-07-27_19-20-03/problem_iter9_response0.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 3
    # Calculate the daily return to capture the momentum
                                                        ^
IndentationError: expected an indented block after function definition on line 2
